update Swagger docs
